--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -5,6 +5,11 @@ backend:
 media_folder: static/img
 public_folder: /img
 
+slug:
+  encoding: "ascii"
+  clean_accents: true
+  sanitize_replacement: "_"
+
 collections:
   - name: "blog"
     label: "Blog"
